--- a/Anyone_Can_Learn_AI_Using_This_Blog_072319.ipynb
+++ b/Anyone_Can_Learn_AI_Using_This_Blog_072319.ipynb
@@ -6,8 +6,7 @@
       "name": "Anyone Can Learn AI Using This Blog 072319.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/issacdxf/openrisc/blob/master/Anyone_Can_Learn_AI_Using_This_Blog_072319.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
